_generated-doc/2.7/config/quarkus-keycloak-devservices-keycloak-keycloak-build-time-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-keycloak-devservices-keycloak-keycloak-build-time-config_configuration]]link:#quarkus-keycloak-devservices-keycloak-keycloak-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-devservices-keycloak-keycloak-build-time-config_quarkus.keycloak.devservices.enabled]]`link:#quarkus-keycloak-devservices-keycloak-keycloak-build-time-config_quarkus.keycloak.devservices.enabled[quarkus.keycloak.devservices.enabled]`

[.description]
--
If DevServices has been explicitly enabled or disabled. 
 When DevServices is enabled Quarkus will attempt to automatically configure and start Keycloak when running in Dev or Test mode and when Docker is running.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-devservices-keycloak-keycloak-build-time-config_quarkus.keycloak.devservices.image-name]]`link:#quarkus-keycloak-devservices-keycloak-keycloak-build-time-config_quarkus.keycloak.devservices.image-name[quarkus.keycloak.devservices.image-name]`

[.description]
--
The container image name to use, for container based DevServices providers. Image with a Quarkus based Keycloak-X distribution is used by default. Image with a WildFly based Keycloak distribution can be selected instead, for example: 'quay.io/keycloak/keycloak:16.1.0'. 
 Note Keycloak-X and Keycloak images are initialized differently. By default, Dev Services for Keycloak will assume it is a Keycloak-X image if the image name contains a 'keycloak-x' string. Set 'quarkus.keycloak.devservices.keycloak-x-image' to override this check.
--|string 
|`quay.io/keycloak/keycloak-x:16.1.0`


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-devservices-keycloak-keycloak-build-time-config_quarkus.keycloak.devservices.keycloak-x-image]]`link:#quarkus-keycloak-devservices-keycloak-keycloak-build-time-config_quarkus.keycloak.devservices.keycloak-x-image[quarkus.keycloak.devservices.keycloak-x-image]`

[.description]
--
If Keycloak-X image is used. By default, Dev Services for Keycloak will assume a Keycloak-X image is used if the image name contains a 'keycloak-x' string. Set 'quarkus.keycloak.devservices.keycloak-x-image' to override this check which may be necessary if you build custom Keycloak-X or Keycloak images. You do not need to set this property if the default check works.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-devservices-keycloak-keycloak-build-time-config_quarkus.keycloak.devservices.shared]]`link:#quarkus-keycloak-devservices-keycloak-keycloak-build-time-config_quarkus.keycloak.devservices.shared[quarkus.keycloak.devservices.shared]`

[.description]
--
Indicates if the Keycloak container managed by Quarkus Dev Services is shared. When shared, Quarkus looks for running containers using label-based service discovery. If a matching container is found, it is used, and so a second one is not started. Otherwise, Dev Services for Keycloak starts a new container. 
 The discovery uses the `quarkus-dev-service-label` label. The value is configured using the `service-name` property. 
 Container sharing is only used in dev mode.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-devservices-keycloak-keycloak-build-time-config_quarkus.keycloak.devservices.service-name]]`link:#quarkus-keycloak-devservices-keycloak-keycloak-build-time-config_quarkus.keycloak.devservices.service-name[quarkus.keycloak.devservices.service-name]`

[.description]
--
The value of the `quarkus-dev-service-keycloak` label attached to the started container. This property is used when `shared` is set to `true`. In this case, before starting a container, Dev Services for Keycloak looks for a container with the `quarkus-dev-service-keycloak` label set to the configured value. If found, it will use this container instead of starting a new one. Otherwise it starts a new container with the `quarkus-dev-service-keycloak` label set to the specified value. 
 Container sharing is only used in dev mode.
--|string 
|`quarkus`


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-devservices-keycloak-keycloak-build-time-config_quarkus.keycloak.devservices.realm-path]]`link:#quarkus-keycloak-devservices-keycloak-keycloak-build-time-config_quarkus.keycloak.devservices.realm-path[quarkus.keycloak.devservices.realm-path]`

[.description]
--
The class or file system path to a Keycloak realm file which will be used to initialize Keycloak.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-devservices-keycloak-keycloak-build-time-config_quarkus.keycloak.devservices.java-opts]]`link:#quarkus-keycloak-devservices-keycloak-keycloak-build-time-config_quarkus.keycloak.devservices.java-opts[quarkus.keycloak.devservices.java-opts]`

[.description]
--
The JAVA_OPTS passed to the keycloak JVM
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-devservices-keycloak-keycloak-build-time-config_quarkus.keycloak.devservices.realm-name]]`link:#quarkus-keycloak-devservices-keycloak-keycloak-build-time-config_quarkus.keycloak.devservices.realm-name[quarkus.keycloak.devservices.realm-name]`

[.description]
--
The Keycloak realm name. This property will be used to create the realm if the realm file pointed to by the 'realm-path' property does not exist, default value is 'quarkus' in this case. If the realm file pointed to by the 'realm-path' property exists then it is still recommended to set this property for Dev Services for Keycloak to avoid parsing the realm file in order to determine the realm name.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-devservices-keycloak-keycloak-build-time-config_quarkus.keycloak.devservices.create-realm]]`link:#quarkus-keycloak-devservices-keycloak-keycloak-build-time-config_quarkus.keycloak.devservices.create-realm[quarkus.keycloak.devservices.create-realm]`

[.description]
--
Indicates if the Keycloak realm has to be created when the realm file pointed to by the 'realm-path' property does not exist. Disable it if you'd like to create a realm using Keycloak Administration Console or Keycloak Admin API from `io.quarkus.test.common.QuarkusTestResourceLifecycleManager`.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-devservices-keycloak-keycloak-build-time-config_quarkus.keycloak.devservices.port]]`link:#quarkus-keycloak-devservices-keycloak-keycloak-build-time-config_quarkus.keycloak.devservices.port[quarkus.keycloak.devservices.port]`

[.description]
--
Optional fixed port the dev service will listen to. 
 If not defined, the port will be chosen randomly.
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-devservices-keycloak-keycloak-build-time-config_quarkus.keycloak.devservices.users-users]]`link:#quarkus-keycloak-devservices-keycloak-keycloak-build-time-config_quarkus.keycloak.devservices.users-users[quarkus.keycloak.devservices.users]`

[.description]
--
The Keycloak users map containing the user name and password pairs. If this map is empty then two users, 'alice' and 'bob' with the passwords matching their names will be created. This property will be used to create the Keycloak users if the realm file pointed to by the 'realm-path' property does not exist.
--|`Map<String,String>` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-keycloak-devservices-keycloak-keycloak-build-time-config_quarkus.keycloak.devservices.roles-roles]]`link:#quarkus-keycloak-devservices-keycloak-keycloak-build-time-config_quarkus.keycloak.devservices.roles-roles[quarkus.keycloak.devservices.roles]`

[.description]
--
The Keycloak user roles. If this map is empty then a user named 'alice' will get 'admin' and 'user' roles and all other users will get a 'user' role. This property will be used to create the Keycloak roles if the realm file pointed to by the 'realm-path' property does not exist.
--|`Map<String,List<String>>` 
|

|===